Fri Nov 29 12:40:47 1996  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe.ads, xe.adb, xe_parse.adb, xe_stubs.adb, xe_back.adb: Add a
 	new partition attribute Permanent and all the needed operations.

	* xe.ads, xe.adb, xe_build.adb: Use XE subprograms to build
	GNATDIST report.

Fri Nov 29 11:47:57 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Generate a call to Set_Boot_Server in elaboration
	  file if protocol has been specified in configuration file.

	* xe.ads: Default starter is now Ada instead of Shell.

Thu Nov 28 23:56:12 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_utils.ads: New flags.

	* xe_utils.adb: Compile with -gnatg.

	* xe_stubs.adb: Generation and compilation of new elaboration file.

Wed Nov 27 18:07:17 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_utils.ads: New argument to Write_* functions with file
	  descriptors to allow duplicate output when generating scripts.

	* xe_utils.adb: Fixed the way script output was handled.

	* xe_stubs.adb: Write on standard out (if needed) as well as in
	  generated file.

	* xe_lead.adb: Use "__EOF__" instead of "EOF" and do not
	  unconditionnally close output.

	* xe_check.adb: Generates "gnatmake -c ..." commands.

	* xe_build.adb: Add "#! /bin/sh" at the beginning of the script.

Wed Nov 20 12:39:57 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe.ads: Move Write_SLOC from xe_back.adb to xe.ads.

	* xe_check.adb: Fix an error message.

	* xe_back.adb: Use SLOC to print a more usefull error message.

	* xe_parse.adb: Check in P_Configuration_End that the
	configuration name is known before checking that it matches.

	* xe_stubs.adb: Create_Main_Unit rebuilds the partition main
	subprogram when Most_Recent_Stamp is more recent than the current
	partition main subprogram file stamp.

Fri Nov  8 16:35:19 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_check.adb: Check that partition name does not conflict with
 	any other ada units (not present in the configuration file).
	
